# parallel-change

./: .gitignore  build.gradle
Cpp/: .gitignore  README.md  coverage.sh
Cpp/Source/: CMakeLists.txt
Cpp/Source/Field/: CMakeLists.txt
Cpp/Source/Field.Test/: CMakeLists.txt
Cpp/Source/Field.Test/source/: ImagineThisIsAClientInADifferentRepositoryTest.cpp  ShoppingCartTest.cpp
Cpp/Source/Field/include/: ImagineThisIsAClientInADifferentRepository.h  ShoppingCart.h
Cpp/Source/Field/source/: LocalClient.cpp
Cpp/Source/Method/: CMakeLists.txt
Cpp/Source/Method.Test/: CMakeLists.txt
Cpp/Source/Method.Test/source/: AuthenticationServiceTest.cpp
Cpp/Source/Method/include/: AnotherClientOfAuthenticator.h  AuthenticationService.h  ClientOfAuthenticator.h
Cpp/Source/Method/source/: ClientOfAuthenticator.cpp
Csharp/: .hg_archival.txt  .hgignore  ParallelAndNarrowChange.sln
Csharp/ParallelAndNarrowChange/: ParallelAndNarrowChange.csproj  packages.config
Csharp/ParallelAndNarrowChange/Field/: ImagineThisIsAClientInADifferentRepository.cs  ShoppingCart.cs
Csharp/ParallelAndNarrowChange/Method/: AnotherClientOfAuthenticator.cs  AuthenticationService.cs  ClientOfAuthenticator.cs
Csharp/ParallelAndNarrowChange/Properties/: AssemblyInfo.cs
Csharp/ParallelAndNarrowChange/Tests/: AuthenticatorShould.cs  ShoppingCartShould.cs
Golang/: README.md
Golang/parallelchange/: authentication_service.go  authenticator_example_test.go  authenticator_test.go  shopping_cart.go  shopping_cart_example_test.go  shopping_cart_test.go
Java/: build.gradle
Java/gradle/wrapper/: gradle-wrapper.properties
PHP/: README.md  authentication_example.php  composer.json  shopping_cart_example.php
PHP/src/: AuthenticationService.php  ShoppingCart.php
PHP/tests/: AuthenticationServiceTest.php  ShoppingCartTest.php
Python/: field.py  method.py  tests.py
Ruby/: README.md  authentication_service.rb  authenticator_spec.rb  run.sh  shopping_cart.rb  shopping_cart_spec.rb
Swift/ParallelChange/ParallelChange.xcodeproj/: project.pbxproj
Swift/ParallelChange/ParallelChange.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Swift/ParallelChange/ParallelChangeTest/: AuthenticationService.swift  AuthenticatorTest.swift  ShoppingCarTest.swift  ShoppingCart.swift
src/test/java/method/: AuthenticationServiceTest.java
(+14 files in other folders)
